--- a/tarea_42/index.html
+++ b/tarea_42/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html" charset="iso-8859-1" />
-        <title>Pagina tarea 42</title>
+        <title>Pagina principal tarea 42</title>
     </head>
     <body>
         <h1>Esta etiqueta me permite definir el encabezado de la pagina</h1>
@@ -15,13 +15,31 @@
         Para crear un salto de linea de esta manera, 'br' (con un espaciado diferente <br />
         al que se genera con la etiqueta 'p')
         <hr />
+        <h1>CONTENIDO MULTIMEDIA</h1>
+        <ol>
+            <li>
+                <a href="enlaces.html">Pagina enlaces</a>
+            </li>
+        </ol>
+        <hr />
+        <h1>LISTAS</h1>
         A continuacion se crea una lista desordenada <br />
         <ul>
-            <li>
-                 
-            
-            </li>
+            <li>Primer Elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
         </ul>
+        A continuacion se crea una lista ordenada(por numeros) <br />
+        <ol>
+            <li>Primer Elemento</li>
+            <li>Segundo elemento</li>
+            <li>Tercer elemento</li>
+        </ol>
+        <hr />
+        <h1>IMAGENES</h1>
+        Ahora insertaremos imagenes en nuestra pagina:
+        <br />
+        <img width="150" alt="Texto alternativo en caso de que no se cargue la imagen" src="img/Gato_Siames.jpg" height="200" />
 
     </body>
 </html>
