--- a/tarea_42/enlaces.html
+++ b/tarea_42/enlaces.html
@@ -2,14 +2,20 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html" charset="iso-8859-1" />
-    <title>Pagina enlaces tarea 42</title>
+    <title>Pagina de enlaces tarea 42</title>
 </head>
 <body>
     <h1>PAGINA QUE ALMACENA CONTENIDO MULTIMEDIA</h1>
+    <hr />
+    <h2>PAGINAS WEB ASOCIADAS</h2>
     <ul>
         <li>
             <a href="index.html">Pagina principal</a>
         </li>
+        <li>
+            <a href="pruebas.html">Pagina pruebas</a>
+        </li>
     </ul>
+
 </body>
 </html>
