--- a/tarea_42/index.html
+++ b/tarea_42/index.html
@@ -1,92 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
-        <meta http-equiv="content-type" content="text/html" charset="iso-8859-1" />
         <title>Pagina principal tarea 42</title>
+        <meta http-equiv="Content-Type" content="text/html" charset="iso-8859-1" />
+        <meta name="description" content="Esta es mi primera WEB" />
+        <meta name="author" content="Daniel Bilbao Moreno para The Egg" />
+        <meta name="keywords" content="Primera WEB, Enlace, Youtube, The Egg, Inteligencia Artificial" />
     </head>
     <body>
-        <h1>Esta etiqueta me permite definir el encabezado de la pagina</h1>
-        <h2>Esta etiqueta me permite crear un ecabezado de segundo nivel (menor tamaño)</h2>
+        <h1>MI PRIMERA "PAGINA WEB" - TAREA 42</h1>
+        <h2>Escuela de inteligencia artificial - The Egg</h2> <img width="150" alt="Texto alternativo en caso de que no se cargue la imagen" src="img/logo_theegg.jpg" height="150" />
+        <h3>Breve descripción</h3>
 
-        <p>Con esta etiqueta pongo parrafos sfsdfiadsgnoafkgmgadfgdfgdfsgsdfgfd</p>
-        <p>Con esta etiqueta pongo parrafos sfsdfiadsgnoafkgmgadfgdfgdfsgsdfgfd</p>
-        Sin etiquetas no hace saltos de linea>>
-        Mira como sigue <br />
-        Para crear un salto de linea de esta manera, 'br' (con un espaciado diferente <br />
-        al que se genera con la etiqueta 'p')
+        <p>
+            Primera escuela de inteligencia artificial semipresencial y
+            sin profesores para la generacion de nuevo talento basado en hablidades.
+        </p>
+        <p>
+            Para más información, puede consultar su pagina web:
+            <a href="https://theegg.ai/">The Egg</a>
+        </p>
         <hr />
-        <h1>CONTENIDO MULTIMEDIA</h1>
+
+        <h2>ENUNCIADO DE LA TAREA</h2>
+        El alumno para superar esta tarea debe:<br />
+        <ol>
+            <li>Diseñar una estructura básica de HTML y verla en el navegador</li>
+            <li>Introducir algo de color a la página apoyandose en CSS</li>
+            <li>Añadir un video gracias a la nueva etiqueta video de HTML5</li>
+            <li>Opcional: Darle al play y al pause al video mediante instrucciones por voz utilizando JavaScript</li>
+        </ol>
+        <hr />
+
+        <h2>PAGINAS WEB ASOCIADAS</h2>
         <ul>
+            <li>
+                <a href="pruebas.html">Pagina pruebas</a>
+            </li>
             <li>
                 <a href="enlaces.html">Pagina enlaces</a>
             </li>
         </ul>
         <hr />
-        <h1>LISTAS</h1>
-        A continuacion se crea una lista desordenada <br />
-        <ul>
-            <li>Primer Elemento</li>
-            <li>Segundo elemento</li>
-            <li>Tercer elemento</li>
-        </ul>
-        A continuacion se crea una lista ordenada(por numeros) <br />
-        <ol>
-            <li>Primer Elemento</li>
-            <li>Segundo elemento</li>
-            <li>Tercer elemento</li>
-        </ol>
-        <hr />
-        <h1>IMAGENES</h1>
-        Ahora insertaremos imagenes en nuestra pagina:
-        <br />
-        <img width="150" alt="Texto alternativo en caso de que no se cargue la imagen" src="img/Gato_Siames.jpg" height="200" />
-        <hr />
-        <h1>TABLAS</h1>
-
-        <table border="1">
-            <tr>
-                <td>Nombre</td>
-                <td>Apellidos</td>
-                <td>DNI</td>
-            </tr>
-            <tr>
-                <td>ALGOnombre</td>
-                <td>ALGOapellido</td>
-                <td>ALGOdni</td>
-            </tr>
-            <tr>
-                <td>ALGO</td>
-                <td>ALGO</td>
-                <td>ALGO</td>
-            </tr>
-            <tr>
-                <td>ALGO</td>
-                <td>ALGO</td>
-                <td>ALGO</td>
-            </tr>
-        </table>
-        <hr />
-        <h1>FORMULARIOS</h1>
-        <p>Formulario de contacto:</p>
-        <form>
-            <label>Nombre</label>
-            <input type="text" /> <br />
-
-            <label>DNI</label>
-            <input type="text" /> <br />
-
-            <label>Email</label>
-            <input type="email" /> <br />
-
-            <label>Sexo</label>
-            <select>
-                <option value="VariableHombre">Hombre</option>
-                <option value="VariableMujer">Mujer</option>
-            </select> <br />
-
-            <label>Pulse para enviar el formulario:</label>
-            <input type="submit" value="Enviar" />
-
-        </form>
+       
     </body>
 </html>
