Falta modificas fuente de Enlaces y Pruebas, meter video y activar por voz - Tarea 42

--- a/tarea_42/pruebas.html
+++ b/tarea_42/pruebas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="styles_pruebas.css" />
     <title>Pagina de pruebas tarea 42</title>
     <meta http-equiv="Content-Type" content="text/html" charset="iso-8859-1" />
     <meta name="description" content="Pagina de puebas realizadas para el ejercicio" />
