--- a/tarea_42/enlaces.html
+++ b/tarea_42/enlaces.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html" charset="iso-8859-1" />
+    <link rel="stylesheet" type="text/css" href="styles_enlaces.css" />
+    <meta http-equiv="Content-Type" content="text/html" charset="iso-8859-1" />
+    <meta name="description" content="Esta es mi primera WEB" />
+    <meta name="author" content="Daniel Bilbao Moreno para The Egg" />
+    <meta name="keywords" content="Primera WEB, Enlace, Youtube, The Egg, Inteligencia Artificial" />
     <title>Pagina de enlaces tarea 42</title>
 </head>
 <body>
