--- a/tarea_42/enlaces.html
+++ b/tarea_42/enlaces.html
@@ -20,6 +20,16 @@
             <a href="pruebas.html">Pagina pruebas</a>
         </li>
     </ul>
+    <hr />
+
+    <h2>VIDEO CON LA ETIQUETA "IFRAME"</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/iwaUan_AA2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr />
+
+    <h2>VIDEO CON LA ETIQUETA "VIDEO"</h2>
+    <video id="elVideo" controls>
+        <source src="https://youtu.be/NNGm_-kko7Q" type="video/mp4">
+    </video>
 
 </body>
 </html>
