--- a/tarea_42/pruebas.html
+++ b/tarea_42/pruebas.html
@@ -14,7 +14,7 @@
     <hr />
 
     <h2>PAGINAS WEB ASOCIADAS</h2>
-    <ul>
+    <ul class="Enlaces">
         <li>
             <a href="index.html">Pagina principal</a>
         </li>
