--- a/tarea_42/enlaces.html
+++ b/tarea_42/enlaces.html
@@ -12,7 +12,7 @@
     <h1>PAGINA QUE ALMACENA CONTENIDO MULTIMEDIA</h1>
     <hr />
     <h2>PAGINAS WEB ASOCIADAS</h2>
-    <ul>
+    <ul class="Enlaces">
         <li>
             <a href="index.html">Pagina principal</a>
         </li>
@@ -27,9 +27,10 @@
     <hr />
 
     <h2>VIDEO CON LA ETIQUETA "VIDEO"</h2>
-    <video id="elVideo" controls>
+    <video width="560" height="315" id="Video Youtube" controls>
         <source src="videos/Video_Youtube.mp4" type="video/mp4">
     </video>
 
+    <script type="text/javascript" src="Voz.js"></script>
 </body>
 </html>
