Falta iniciar/detener

--- a/tarea_42/enlaces.html
+++ b/tarea_42/enlaces.html
@@ -22,12 +22,17 @@
     </ul>
     <hr />
 
+    <h2>TEXTO RECONOCIDO POR LA API</h2>
+    <div id="TextoReconocido"></div>
+    <script src="Voz.js"></script>
+    <hr />
+
     <h2>VIDEO CON LA ETIQUETA "IFRAME"</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/iwaUan_AA2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" id="EtiquetaiFrame" src="https://www.youtube.com/embed/iwaUan_AA2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <hr />
 
     <h2>VIDEO CON LA ETIQUETA "VIDEO"</h2>
-    <video width="560" height="315" id="Video Youtube" controls>
+    <video width="560" height="315" id="EtiquetaVideo" controls>
         <source src="videos/Video_Youtube.mp4" type="video/mp4">
     </video>
 
