--- a/tarea_42/pruebas.html
+++ b/tarea_42/pruebas.html
@@ -78,6 +78,6 @@
 
     </form>
 
-    <script type="text/javascript" src="Formulario.js"></script>
+    <script type="text/javascript" src="pruebas.js"></script>
 </body>
 </html>
