--- a/tarea_42/enlaces.html
+++ b/tarea_42/enlaces.html
@@ -39,6 +39,6 @@
     <h2>VIDEO CON LA ETIQUETA "IFRAME"</h2>
     <iframe width="560" height="315" id="EtiquetaiFrame" src="https://www.youtube.com/embed/iwaUan_AA2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <script type="text/javascript" src="Voz.js"></script>
+    <script type="text/javascript" src="enlaces.js"></script>
 </body>
 </html>
