--- a/tarea_42/index.html
+++ b/tarea_42/index.html
@@ -30,7 +30,7 @@
             <li>Diseñar una estructura básica de HTML y verla en el navegador ✔️</li>
             <li>Introducir algo de color a la página apoyandose en CSS ✔️</li>
             <li>Añadir un video gracias a la nueva etiqueta video de HTML5 ✔️</li>
-            <li>Opcional: Darle al play y al pause al video mediante instrucciones por voz utilizando JavaScript 🔜</li>
+            <li>Opcional: Darle al play y al pause al video mediante instrucciones por voz utilizando JavaScript ✔️</li>
         </ol>
         <hr />
 
